Set up basic layout for submit question files

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 <body>
 
-<h1>SHE-nonymous</h1>
+	<h1>SHE-nonymous</h1>
 
-<p>There will soon be things here
+	<p>There will soon be things here
+	<p>We are using database: {database}
+	<p>This is a dump of all the content of the questions asked: 
+
+
 </body>
 </html>
