Submitting questions & listing questions on index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- 
     Author: Samantha Voigt
-    Last Modified: 4/16/16
+    Last Modified: 4/19/16
 -->
 
 <!doctype html>
@@ -15,7 +15,7 @@
 
 	<p>There will soon be things here
 	<p>We are using database: {database}
-	<p>This is a dump of all the content of the questions asked: 
+	<p>This is a dump of all the content of the questions asked: {allQuestions}
 
 
 </body>
