Finished basic question asking/answering/viewing functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h1>SHE-nonymous</h1>
 
 	<p>We are using database: {database}
-	<p>This is a dump of all the content of the questions asked: {allQuestions}
+	<p>This is a dump of all of the questions that have been answered: {allQuestions}
 
 
 </body>
