--- a/answerQuestions.html
+++ b/answerQuestions.html
@@ -14,14 +14,7 @@
 	<h1>SHE-nonymous - Answer</h1>
 
 	<form method=post action="answerQuestions.cgi">
-		{questionSelect}
-		<br>
-		<label for="answer">Answer:</label>
-		<br>
-		<textarea name="answer" cols="40" rows="5"></textarea>
-		<br>
-		<input type='submit' name='save' value='Save'>
-		<input type='submit' name='publish' value='Publish'>
+		{formContent}
 	</form>
 
 </body>
