--- a/answerQuestions.html
+++ b/answerQuestions.html
@@ -13,6 +13,12 @@
 
 	<h1>SHE-nonymous - Answer</h1>
 
+	<div id="nav">
+		<a href="index.cgi">Home</a>
+		<a href="submitQuestion.cgi">Submit</a>
+		<a href="answerQuestions.cgi">For SHEs only</a>
+	</div>
+
 	<form method=post action="answerQuestions.cgi">
 		{formContent}
 	</form>
