--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
 	<h1>SHE-nonymous</h1>
 
+	<div id="nav">
+		<a href="index.cgi">Home</a>
+		<a href="submitQuestion.cgi">Submit</a>
+		<a href="answerQuestions.cgi">For SHEs only</a>
+	</div>
+
 	<p>We are using database: {database}
 	<p>This is a dump of all of the questions that have been answered: {allQuestions}
 
