Add bootstrap CDN links and hide message id input

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 <head>
     <meta charset="utf8">
     <title>SHE-nonymous</title>
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    
 </head>
 <body>
-
 	<h1>SHE-nonymous</h1>
-
 	<div id="nav">
 		<a href="index.cgi">Home</a>
 		<a href="submitQuestion.cgi">Submit</a>
@@ -21,7 +29,6 @@
 
 	<p>We are using database: {database}
 	<p>This is a dump of all of the questions that have been answered: {allQuestions}
-
 
 </body>
 </html>
