Lots of styling on index

--- a/submitQuestion.html
+++ b/submitQuestion.html
@@ -52,6 +52,9 @@
     </nav>
 
     <div class="container" id="content"> 
+    	<h1>Submit a Question</h1>
+    	<p>Some words will go here about what we want to say when a person is going to ask a question
+
 		<form method=post action="submitQuestion.cgi">
 			<label for="question">Your Question:</label>
 			<br>
