--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     </div>
 
 
-	<div class="container" id="content"> 
+	<div class="container" id="content">
+		<h1>Answered Questions:</h1>
+		<hr>
 		{allQuestions}
 	</div>
 
