Add sign in - additional formatting

--- a/answerQuestions.html
+++ b/answerQuestions.html
@@ -44,14 +44,14 @@
             <li><a href="submitQuestion.cgi">Submit Question</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="answerQuestions.cgi">SHEs Only</a></li>
+            <li class="active"><a href="answerQuestions.cgi">SHE Login</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container" id="content"> 
-    	
+
 
 		<form method=post action="answerQuestions.cgi">
 			{formContent}
