--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a href="submitQuestion.cgi">Submit Question</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="answerQuestions.cgi">SHEs Only</a></li>
+            <li><a href="answerQuestions.cgi">SHE Login</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
