Finished SHE login navbar changes

--- a/submitQuestion.html
+++ b/submitQuestion.html
@@ -45,13 +45,14 @@
             <li class="active"><a href="submitQuestion.cgi">Submit Question</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="answerQuestions.cgi">SHE Login</a></li>
+            {rightLinks}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container" id="content"> 
+    	{message}
     	<h1>Submit a Question</h1>
     	<p>Some words will go here about what we want to say when a person is going to ask a question
 
