--- a/answerQuestions.html
+++ b/answerQuestions.html
@@ -44,7 +44,8 @@
             <li><a href="submitQuestion.cgi">Submit Question</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="answerQuestions.cgi">SHE Login</a></li>
+            <li class="active"><a href='answerQuestions.cgi'>Answer Questions</a></li>
+            <li><a href='index.cgi?logout=True'>Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
