Added edit answer functionality

--- a/answerQuestions.html
+++ b/answerQuestions.html
@@ -53,6 +53,8 @@
 
     <div class="container" id="content"> 
 
+    	{message}
+
 
 		<form method=post action="answerQuestions.cgi">
 			{formContent}
