--- a/submitQuestion.html
+++ b/submitQuestion.html
@@ -62,7 +62,7 @@
 				<label for="question">Your Question:</label>
 				<textarea class="form-control" name="question" rows="10"></textarea>
 			</fieldset>
-			  <input type="submit" class="btn btn-primary" name="submit" value="submit">
+			  <input type="submit" class="btn btn-primary" name="submit" value="Submit">
 		</form>
 	</div>
 
