--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- 
     Author: Samantha Voigt
-    Last Modified: 4/19/16
 -->
 
 <!doctype html>
@@ -69,6 +68,11 @@
 		<h1>Answered Questions:</h1>
 		<hr>
 		{allQuestions}
+    <nav>
+    <ul class="pager">
+      {pagerButtons}
+    </ul>
+    </nav>
 	</div>
 
 	<!-- jQuery -->
