--- a/answerQuestions.html
+++ b/answerQuestions.html
@@ -44,6 +44,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href='answerQuestions.cgi'>Answer Questions</a></li>
+            <li><a href={profileLink}>Profile</a></li>
             <li><a href='index.cgi?logout=True'>Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
